<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this
   project is built with catkin
   -->
  <name>break_rqt_graph</name>
  <version>0.0.1</version>
  <description>
  Configuration package for Pyros
  </description>

  <license>BSD</license>

  <author email="kei.okada@gmail.com">Kei Okada</author>
  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.1.15">catkin_pip</build_depend>

  <depend>python-six</depend>

  <depend>python-pytest</depend>

  <!-- <export> -->
  <!--   <rosdoc config="rosdoc.yaml" /> -->
  <!-- </export> -->

</package>
